20190618
- Fix analytic potential functions "mishin" and "gljm"

20190610
- Fix invalid function pointers for APOT potentials using MPI parallelization.
- Fix crash when terminating MPI calculations.
- Fix crashes when using multiple configurations with KIM potentials.

20190419
- Add support for writing PAIR potentials in LAMMPS format.

20190331
- Update to latest OpenKIM API v2.0.2.

20190325
- Add basic support for OpenKIM v2.0 API, version 1.0 is no longer supported.
  Support for MPI is not yet available.

20180923
- Replace 'dist' option with 'bindist', functionality is the same.
  'dist' is too confusing and is completely unrelated to the regular pair distribution file.
  Instead it creates a binned pair distribution of the potential access with respect to
  the provided tabulated potentials.

20180909
- Remove support for ACML. For details see https://github.com/potfit/potfit/issues/43

20180709:
- Fix stiweb and tersoff potentials when used together with global parameters

20180226:
- Disable LAMMPS output for MEAM potentials, which is currently not implemented properly

20180214:
- If there are no atoms inside a potential interaction range potfit will now report an error
- Added tests for minimal distance calculation

=======================================================

potfit-next
+ completely rewrote internal potfit data structure
+ move source code into src directory

potfit-0.7.1 (20141127)
+ remove the version.h file, it caused too much trouble
+ make vasp2force compatible with VASP version 5 OUTCAR files
+ fix output of LAMMPS potential tables
+ small bugfixes

potfit-0.7.0 (20140123)
+ add global scaling parameter (UNTESTED)
+ add tbeam interaction
+ remove WZERO and PARAB options
+ add modified tersoff potential
+ remove NEWSCALE option
+ remove NORESCALE option, rescaling is now no longer enabled by default
  enable it with the RESCALE option
+ bump copyright to 2014

potfit-0.6.0 (20130821)