@@ -1,3 +1,7 @@
+20190623
+- Fix crash with OpenKIM and models which use Integer parameters
+- Fix short distance error when writing a LAMMPS ADP potential
+
 20190618
 - Fix analytic potential functions "mishin" and "gljm"
 
